// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/markdownEditor should match snapshot 1`] = `
<div>
  <div
    class="MarkdownEditor octo-editor classname-test "
  >
    <div
      class="octo-editor-preview octo-placeholder"
      data-testid="preview-element"
    />
  </div>
</div>
`;

exports[`components/markdownEditor should match snapshot with initial text 1`] = `
<div>
  <div
    class="MarkdownEditor octo-editor classname-test "
  >
    <div
      class="octo-editor-preview"
      data-testid="preview-element"
    />
  </div>
</div>
`;

exports[`components/markdownEditor should match snapshot with on click on preview element 1`] = `
<div>
  <div
    class="MarkdownEditor octo-editor classname-test active"
  />
</div>
`;

exports[`components/markdownEditor should match snapshot with on click on preview element and then click out of it 1`] = `
<div>
  <div
    class="MarkdownEditor octo-editor classname-test active"
  >
    <div
      class="MarkdownEditorInput"
    >
      <div
        class="DraftEditor-root"
      >
        <div
          class="DraftEditor-editorContainer"
        >
          <div
            aria-autocomplete="list"
            aria-expanded="false"
            class="notranslate public-DraftEditor-content"
            contenteditable="true"
            role="combobox"
            spellcheck="false"
            style="outline: none; user-select: text; white-space: pre-wrap; word-wrap: break-word;"
          >
            <div
              data-contents="true"
            >
              <div
                class=""
                data-block="true"
                data-editor="test-id"
                data-offset-key="123-0-0"
              >
                <div
                  class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                  data-offset-key="123-0-0"
                >
                  <span
                    data-offset-key="123-0-0"
                  >
                    <span
                      data-text="true"
                    >
                      some initial text already set
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
